[MyPosters]: Fixed horizontal scrolling

--- a/Application/src/Pages/DashBoard/MyPostersSection.css
+++ b/Application/src/Pages/DashBoard/MyPostersSection.css
@@ -35,6 +35,6 @@
 
 #InnerMyPostersDiv span {
     display: flex;
-    overflow-x: scroll;
+    overflow-x: scroll !important;
 }
 
